--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!-- Add Azure Application Insights to your chat.
         Uncomment the following code snippet and replace
@@ -22,8 +23,13 @@
     <link href="stylesheets/style.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
-<div id="webchat" role="main" watermark="false"></div>
-<script>chatRequested();</script>
+    <div class="header">
+        <div class="logo"></div>
+    </div>
+    <div id="webchat" role="main" watermark="false"></div>
+    <script>chatRequested();</script>
 </body>
+
 </html>
